fix menu view on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -67,6 +67,12 @@
   font-family: 'Pieces of Eight';
 }
 
+@media only screen and (max-device-width: 480px) {
+  .title {
+    font-size: 5rem;
+  }
+}
+
 .description {
   margin: 4rem 0;
   line-height: 1.8;
